--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
+    "@mui/x-charts": "^6.18.0",
     "@prisma/client": "^5.5.2",
     "chart.js": "^4.4.0",
     "framer-motion": "^10.16.4",
