--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.14.15",
     "@mui/x-charts": "^6.18.0",
     "@prisma/client": "^5.5.2",
+    "@supabase/supabase-js": "^2.38.4",
     "chart.js": "^4.4.0",
     "framer-motion": "^10.16.4",
     "jotai": "^2.5.0",
